<resources>
    <string name="app_name">taboo-android-app</string>
    <string name="app_title">TABOO</string>
    <string name="play_button_text">PLAY</string>
    <string name="how_to_play_button_text">HOW TO PLAY</string>
    <string name="copyright">© 2016 Jess DeJong</string>
    <string name="store_icon_content_description">Store</string>
    <string name="information_icon_content_description">Information</string>
    <string name="settings_icon_content_description">Settings</string>
    <string name="taboo_icon_content_description">Taboo</string>
    <string name="pass_icon_content_description">Pass</string>
    <string name="correct_icon_content_description">Correct</string>
    <string name="settings_title">Settings</string>
    <string name="information_text"></string>
    <string name="game_settings_title">Game Settings</string>
    <string name="how_to_play_title">How To Play</string>
    <string name="store_title">Store</string>
    <string name="num_rounds_choose_text">Number of Rounds:&#160;</string>
    <string name="time_in_round_choose_text">Seconds Per Round:&#160;</string>
    <string name="choose_team_names_text">Team Names</string>
    <string name="choose_team_name_1_text">Team 1:&#160;</string>
    <string name="choose_team_name_2_text">Team 2:&#160;</string>
    <string name="team_1_hint_text">Team 1</string>
    <string name="team_2_hint_text">Team 2</string>
    <string name="round_text">Round&#160;</string>
    <string name="total_score_descr">Total Score</string>
    <string name="round_score_descr">Round Score</string>
    <string name="pause_title">PAUSE</string>
    <string name="resume_text">Resume Game</string>
    <string name="home_text">HOME</string>
    <string name="start_turn_text">Start Turn</string>
</resources>
