<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jesse843.taboo_android_app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        android:textStyle="italic|bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_margin="30dp">
    </View>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/play_button_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/how_to_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/main_button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/how_to_play_button_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle_button_shape"
            android:contentDescription="@string/store_icon_content_description"
            android:shadowColor="#A8A8A8"
            android:shadowRadius="5"
            android:src="@drawable/ic_shop_white_48dp" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle_button_shape"
            android:contentDescription="@string/information_icon_content_description"
            android:shadowColor="#A8A8A8"
            android:shadowRadius="5"
            android:src="@drawable/ic_info_white_48dp"
            android:onClick="informationOnClick"/>

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_button_shape"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/settings_icon_content_description"
            android:shadowColor="#A8A8A8"
            android:shadowRadius="5"
            android:src="@drawable/ic_settings_white_48dp"
            android:onClick="settingsOnClick" />

    </LinearLayout>

    <TextView
        android:id="@+id/information_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:visibility="invisible"
        android:text="@string/information_text"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

</LinearLayout>