<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jesse843.taboo_android_app.PauseActivity">

    <TextView
        android:id="@+id/pause_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/pause_title"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="italic" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pause_title"
        android:background="@color/colorAccent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp">
    </View>

    <View
        android:id="@+id/vertical_line"
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/horizontal_line"
        android:background="@color/colorAccent"
        android:layout_marginBottom="300dp">
    </View>


    <Button
        android:id="@+id/resume_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@drawable/main_button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/resume_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/go_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resume_game_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@drawable/main_button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/home_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>
